<resources>
  <string name="app_name">FO3 Data Player</string>
  <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
  <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
  <string name="hint_search">Player\'s Name e.g. ronaldo,messi</string>
  <string name="skill_moves">Skillmoves</string>
  <string name="title_filter">Filter</string>
  <string name="title_filter_season">Season</string>
  <string name="title_all">All</string>
  <string name="title_filter_league">League</string>
  <string name="text_apply">Search</string>
  <string name="text_limited" translatable="false">Limited</string>
  <string name="text_live_boost" translatable="false">Live Boost</string>
  <string name="title_detail_player" translatable="false">Detail player</string>
  <string name="strength">Strength</string>
  <string name="acceleration">Acceleration</string>
  <string name="sprintspeed">Sprint speed</string>
  <string name="dribbling">Dribble</string>
  <string name="ballcontrol">Ball control</string>
  <string name="shortpassing">Short pass</string>
  <string name="finishing">Finishing</string>
  <string name="shotpower">Shoot power</string>
  <string name="headingaccuracy">Heading</string>
  <string name="longshots">Long shot</string>
  <string name="volleys">Volley</string>
  <string name="positioning">Positioning</string>
  <string name="reactions">Reaction</string>
  <string name="stamina">Stamina</string>
  <string name="jumping">Jump</string>
  <string name="agility">Agility</string>
  <string name="balance">Balance</string>
  <string name="slidingtackle">Sliding tackle</string>
  <string name="marking">Marking</string>
  <string name="standingtackle">Tackle</string>
  <string name="crossing">Cross</string>
  <string name="longpassing">Long pass</string>
  <string name="curve">Shoot Curve</string>
  <string name="freekickaccuracy">Free kick</string>
  <string name="penalties">Penalty kick</string>
  <string name="tacticalawareness">Interception</string>
  <string name="vision">Vision</string>
  <string name="aggression">Aggresion</string>
  <string name="gkkicking">GK Goal kick</string>
  <string name="gkdiving">GK Diving</string>
  <string name="gkhandling">GK Handling</string>
  <string name="gkpositioning">GK Positioning</string>
  <string name="gkreflexes">GK Reaction</string>
  <string name="poten">Potential</string>
  <string name="perfcon">Consistency</string>
  <string name="title_paper_stat_fragment">OVR</string>
  <string name="title_paper_hidden_stat_fragment">Traits</string>
  <string name="title_paper_review_fragment" translatable="false">Reviews</string>
  <string name="speciality_name_1">Solver</string>
  <string name="speciality_name_2">Fast runner</string>
  <string name="speciality_name_3">Dominator of the air</string>
  <string name="speciality_name_4">Technician</string>
  <string name="speciality_name_5">Maestro</string>
  <string name="speciality_name_6">Two hearts</string>
  <string name="speciality_name_7">Cannon Shooter</string>
  <string name="speciality_name_8">Delivery cross</string>
  <string name="speciality_name_9">Freekick Specialist</string>
  <string name="speciality_name_10">Wall of Wail</string>
  <string name="speciality_name_11">Vacuum Cleaner</string>
  <string name="speciality_name_12">Acrobatic</string>
  <string name="speciality_name_13">Tanker</string>
  <string name="speciality_name_14">Goal Getter</string>
  <string name="speciality_name_15">Perfect Defender</string>
  <string name="speciality_name_16">Perfect Midfielder</string>
  <string name="speciality_name_17">Perfect Striker</string>
  <string name="speciality_value_1">Within pentaly area, has a high goal decision with the use of feet and head</string>
  <string name="speciality_value_2">With fast running, outruns the defenders</string>
  <string name="speciality_value_3">With high jump and accurate headers, gains advantage in air</string>
  <string name="speciality_value_4">With impressive skill and dribble, toys defenders</string>
  <string name="speciality_value_5">Becomes the centre of the team and outstanding in making chances for teammates</string>
  <string name="speciality_value_6">From defense to attack, particiaptes without tiring</string>
  <string name="speciality_value_7">Regardless of distance performs strong and accurate shootings</string>
  <string name="speciality_value_8">Proficient at cross which finds perfect areas</string>
  <string name="speciality_value_9">Has fantastic free kick ability, so shoots strong freekick or curling shots</string>
  <string name="speciality_value_10">With outstanding tackling ability, stops the strikers and steals possession</string>
  <string name="speciality_value_11">With high knolwedge of defense and good reaction speed, stops any attacks</string>
  <string name="speciality_value_12">With various unexpected postures, clears the ball and performs bicycle kick</string>
  <string name="speciality_value_13">With high strength, hardly loses a ball to the opposition</string>
  <string name="speciality_value_14">With gifted sense, is always a threat near penalty area</string>
  <string name="speciality_value_15">As a defender… Do you require more explanation?</string>
  <string name="speciality_value_16">As a midfielder… Do you require more explanation?</string>
  <string name="speciality_value_17">As a striker… Do you require more explanation?</string>
  <string name="trait_name_1">Insists preferred position</string>
  <string name="trait_name_2">Long Throw In</string>
  <string name="trait_value_1">Long Throw In</string>
  <string name="trait_value_2">Long Throw In</string>
  <string name="trait_name_7">Prefer main feet</string>
  <string name="trait_value_7">Tries not to use weak feet</string>
  <string name="trait_name_11">Leadership</string>
  <string name="trait_value_11">Leads the team well, so suited as a captain</string>
  <string name="trait_name_14">Sharp curling shot</string>
  <string name="trait_value_14">Proficient at curling shot</string>
  <string name="trait_name_23">Strong Header</string>
  <string name="trait_value_23">Good at heading</string>
  <string name="trait_name_17">Prefer long shot (AI)</string>
  <string name="trait_value_17">Uses long shot often</string>
  <string name="trait_name_6">Steel Body</string>
  <string name="trait_value_6">Not easily injured</string>
  <string name="trait_name_15">Impressive Skill</string>
  <string name="trait_value_15">Can use various skills</string>
  <string name="trait_value_26">Proficient at outside shooting</string>
  <string name="trait_name_26">Outside shooting</string>
  <string name="trait_name_19">Play maker (AI)</string>
  <string name="trait_value_19">Becomes the centre of the team and performs offense through passing</string>
  <string name="trait_name_16">Prefer long pass (AI)</string>
  <string name="trait_value_16">Uses Long pass often</string>
  <string name="trait_name_30">Fantastic clear</string>
  <string name="trait_value_30">With fantastic posture, clears the ball</string>
  <string name="trait_name_8">Prefer sliding tackle (AI)</string>
  <string name="trait_value_8">Tackles often</string>
  <string name="trait_name_27">Celebrity</string>
  <string name="trait_value_27">Encourages fan\'s cheer</string>
  <string name="trait_name_29">Desire to win</string>
  <string name="trait_value_29">At the near end of the match, if losing, gains more strength</string>
  <string name="trait_name_10">Prefer individual play (AI)</string>
  <string name="trait_value_10">Doesn\'t pass often</string>
  <string name="trait_name_28">Pass master</string>
  <string name="trait_value_28">Outstanding at pass skill</string>
  <string name="trait_name_20">GK Assist in Offense (AI)</string>
  <string name="trait_value_20">During corner kick, GK can assist in offense</string>
  <string name="trait_name_22">GK Long Throw</string>
  <string name="trait_value_22">GK can throw ball far</string>
  <string name="trait_name_24">GK Proficient 1:1 Defense</string>
  <string name="trait_value_24">GK is good at 1:1</string>
  <string name="trait_name_4">Diver</string>
  <string name="trait_value_4">When in player competition, obtains foul or freekick through diving</string>
  <string name="trait_name_5">Glass Body</string>
  <string name="trait_value_5">Easily injured</string>
  <string name="trait_name_12">Short tempered</string>
  <string name="trait_value_12">Argues with the ref often</string>
  <string name="trait_name_13">Prefer early cross (AI)</string>
  <string name="trait_value_13">Uses early cross very well</string>
  <string name="trait_name_21">GK Swift punching</string>
  <string name="trait_value_21">GK\'s skill to remove ball is proficient</string>
  <string name="trait_name_25">Super long throw in</string>
  <string name="trait_value_25">Can super long throw in</string>
  <string name="action_search">Search Player FIFA Online 3</string>
  <string name="action_filter" translatable="false">Filter</string>
  <string name="action_remove" translatable="false">Remove</string>
  <string name="title_trait">Traits</string>
  <string name="title_speciality">Specialities</string>
  <string name="trait_name_3" translatable="false">trait_name_3</string>
  <string name="trait_name_9" translatable="false">trait_name_9</string>
  <string name="trait_name_18" translatable="false">trait_name_18</string>
  <string name="trait_value_3" translatable="false">trait_value_3</string>
  <string name="trait_value_9" translatable="false">trait_value_9</string>
  <string name="trait_value_18" translatable="false">trait_value_18</string>
  <string name="empty_state" translatable="false">Empty</string>
  <string name="text_count" translatable="false"> (%d)</string>
  <string name="home">Home</string>
  <string name="tax">Tax calculator</string>
  <string name="compare">Compare</string>
  <string name="favorite">Favorite</string>
  <string name="hint_empty_search">No information you\'re looking for</string>
  <string name="text_season">Season</string>
  <string name="text_league">League</string>
  <string name="text_club">Club</string>
  <string name="text_nation">Nation</string>
  <string name="text_position">Position</string>
  <string name="text_attribute">Attribute</string>
  <string name="text_skill">Skillmoves</string>
  <string name="hint_price">Enter price</string>
  <string name="label_input_balance">Balance</string>
  <string name="label_input_tax">Tax</string>
  <string name="hint_check_pc">PC (20%)</string>
  <string name="hint_check_vip">VIP (30%)</string>
</resources>