<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.huynn109.fifaonline3addict.ui.fragment.TaxFragment"
    >

  <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price"
            android:inputType="number"
            />
      </android.support.design.widget.TextInputLayout>
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_input_tax"
            style="@style/MdTextField.TextWithLabel.Text"
            />
        <TextView
            android:id="@+id/text_tax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            style="@style/MdTextField.TextWithLabel.Text"
            />
      </RelativeLayout>
      <View
          style="@style/MdDivider"
          />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <CheckBox
            android:id="@+id/checkbox_pc"
            android:text="@string/hint_check_pc"
            style="@style/MdCheckBox"
            />
        <TextView
            android:id="@+id/text_pc"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            style="@style/MdText.Body1"
            />
      </RelativeLayout>
      <View
          style="@style/MdDivider"
          />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <CheckBox
            android:id="@+id/checkbox_vip"
            android:text="@string/hint_check_vip"
            style="@style/MdCheckBox"
            />
        <TextView
            android:id="@+id/text_vip"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            style="@style/MdText.Body1"
            />
      </RelativeLayout>
      <View
          style="@style/MdDivider"
          />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/label_input_balance"
            style="@style/MdText.Subhead1"
            />
        <TextView
            android:id="@+id/text_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            style="@style/MdTextField.TextWithLabel.Text"
            />
      </RelativeLayout>
    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>

</FrameLayout>
