<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.huynn109.fifaonline3addict.ui.activity.FilterActivity"
    >

  <android.support.design.widget.AppBarLayout
      android:id="@+id/appbar_main"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
       style="@style/MdToolbar"
        />
  </android.support.design.widget.AppBarLayout>

  <RelativeLayout
      android:id="@+id/relative_filter"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_apply"
        >
      <LinearLayout
          android:id="@+id/linear_search_form"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          >
        <LinearLayout
            android:id="@+id/linear_season"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"

            >
          <TextView
              android:layout_width="70dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:text="@string/text_season"
              />
          <TextView
              android:id="@+id/text_season"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:text="@string/title_all"
              style="@style/TextAppearance.AppCompat.Body1"
              />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/MdDivider"
            />
        <LinearLayout
            android:id="@+id/linear_league"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"

            >
          <TextView
              android:layout_width="70dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:text="@string/text_league"
              />
          <Spinner
              android:id="@+id/spinner_league"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="right"
              style="@style/TextAppearance.AppCompat.Body1"
              />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/MdDivider"
            />
        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="50dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"

            >
          <TextView
              android:layout_width="70dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:text="@string/text_club"
              />
          <Spinner
              android:id="@+id/spinner_club"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="right"
              />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/MdDivider"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"

            >
          <TextView
              android:layout_width="70dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:text="@string/text_nation"
              />
          <Spinner
              android:id="@+id/spinner_country"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/MdDivider"
            />
        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="50dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"

            >
          <TextView
              android:layout_width="70dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:text="@string/text_position"
              />
          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:orientation="horizontal"
              >
            <Spinner
                android:id="@+id/spinner_position_generality"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                />
            <Spinner
                android:id="@+id/spinner_position_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                />
          </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/MdDivider"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"

            >
          <TextView
              android:layout_width="70dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:text="@string/text_attribute"
              />
          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:orientation="horizontal"
              >
            <Spinner
                android:id="@+id/spinner_ability"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                />
            <Spinner
                android:id="@+id/spinner_ability_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                />
          </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/MdDivider"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            >
          <TextView
              android:layout_width="70dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:text="@string/text_skill"
              />
          <Spinner
              android:id="@+id/spinner_skill_moves"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/MdDivider"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"

            >
          <CheckBox
              android:id="@+id/checkbox_live_boost"
              android:layout_width="0dp"
              android:layout_height="50dp"
              android:layout_weight="1"
              android:gravity="center"
              android:hint="@string/text_live_boost"
              />
          <CheckBox
              android:id="@+id/checkbox_limited"
              android:layout_width="0dp"
              android:layout_height="50dp"
              android:layout_weight="1"
              android:gravity="center"
              android:hint="@string/text_limited"
              />
        </LinearLayout>
      </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <ImageView
        style="@style/MdButton.Colored"
        android:id="@+id/button_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_check_24dp"
        android:gravity="center"
        android:text="@string/text_apply"
        />
  </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
